--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <p>Explore the holy pilgrimage of Char Dham with our special tour. <br>(10 Days Trip)</p>
             <p class="price">₹18,000/- Only</p>
             <div class="button-container">
-                <button><a href="/CDYbook.html" id="booknow">Book Now</a></button>
-                <button><a href="/CDYinfo.html" id="moredetails">More Details</a></button>
+                <button><a href="CDYbook.html" id="booknow">Book Now</a></button>
+                <button><a href="CDYinfo.html" id="moredetails">More Details</a></button>
             </div>
         </div>
 
         <div class="tour-card">
-            <img src="/Which-year-will-the-next-Maha-Kumbh-Mela-be-held.webp" alt="Prayagraj">
+            <img src="Which-year-will-the-next-Maha-Kumbh-Mela-be-held.webp" alt="Prayagraj">
             <h2>Mahakumbh</h2>
             <p>Experience the grand Mahakumbh festival in Prayagraj. <br>(36 Hours Trip)</p>
             <p class="price">₹3500/- Only</p>
